--- a/example/test-sdivs.html
+++ b/example/test-sdivs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.css">
+		<link rel="stylesheet" href="stylesheets/bootstrap.css">
 		<link rel="stylesheet" href="stylesheets/custom.css">
 		<script src="vendor/requirejs/require.js" data-main="main-02.js"></script>
 	</head>
